2010-10-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/find-func.el (find-library): Use test-completion.

2010-10-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* newcomment.el (comment-dwim): Fix the intentation in the doc string.

010-10-21  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-do-file-attributes-with-stat): Do not use
	space in stat format string.
	(tramp-send-command): Unset $PS1 when using here documents, in
	order not to get several prompts.
	(tramp-get-inline-coding): Return `nil' in case of errors.

2010-10-21  Daiki Ueno  <ueno@unixuser.org>

	* hexl.el (hexl-mode, hexl-mode-exit):
	Tweak revert-buffer-function to inhibit auto-mode-alist (Bug#7252).
	(hexl-revert-buffer-function): New function.
	(hexl-before-revert-hook, hexl-after-revert-hook): Abolish.

2010-10-19  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-langs.el (c-type-decl-prefix-key): C++ bit:
	Move "\(const\|throw\|volatile\)\>" nearer the start of the regexp, so
	that these keywords aren't wrongly matched as identifiers.

	* progmodes/cc-mode.el (c-before-change, c-after-change): Move the
	setting of c-new-BEG and c-new-END from c-before-change to
	c-after-change.

2010-10-19  Chong Yidong  <cyd@stupidchicken.com>

	* cus-face.el (custom-theme-set-faces): Revert 2010-10-18 change.
	Don't mark as safe.

	* custom.el (custom-theme-set-variables): Likewise.
	(load-theme): Add custom-theme-set-faces and
	custom-theme-set-variables to safe-functions while loading.
	(custom-enabled-themes): Mark as risky.

2010-10-18  Julien Danjou  <julien@danjou.info>

	* bindings.el: Remove end dashes in default mode-line-format.

2010-10-19  Chong Yidong  <cyd@stupidchicken.com>

	* bindings.el (global-map): Bind C-d to delete-char and deletechar
	to delete-forward-char.

	* simple.el (normal-erase-is-backspace-mode): Remap delete to
	deletechar, and hence delete-forward-char.

2010-10-19  Stefan Monnier  <monnier@iro.umontreal.ca>
